# kktrade

./: .gitignore  README.md  pyproject.toml  setup.py
kktrade/: __init__.py
kktrade/config/: __init__.py  apikey.py  com.py  mart.py  migration.py  psgre.py
kktrade/core/: __init__.py  mart.py  model.py
kktrade/database/: __init__.py  psgre.py
kktrade/util/: __init__.py  com.py  database.py  dataframe.py  logger.py  math.py  techana.py
main/: README.md
main/bitflyer/: READMD.md  README.md  bitflyer.py  crontab  getdata.py  loop.sh  monitor.sh  schema.sql
main/bybit/: README.md  schema.sql
main/database/: Dockerfile  README.md  check.py  check.sh  crontab  dbapi.py  dbapi.sh  master_symbol.mongo.json  master_symbol.mysql.sql  master_symbol.psgre.sql  master_symbol.sql  monitor.base.sh  schema.sql  schema_main.mongo.js  schema_main.mysql.sql  schema_main.psgre.sql  schema_main.tidb.sql
main/database/binance/: README.md  crontab  download_pastdata.py  getdata.py  monitor.sh  schema.mongo.js  schema.mysql.sql  schema.psgre.sql  schema.sql
main/database/bitflyer/: README.md  crontab  getdata.py  loop.sh  make_partition_table_sql.py  monitor.sh  schema.mongo.js  schema.mysql.sql  schema.psgre.sql  schema.sql
main/database/bybit/: README.md  crontab  download_pastdata.py  getdata.py  make_partition_table_sql.py  monitor.sh  schema.mongo.js  schema.mysql.sql  schema.psgre.sql  schema.sql
main/database/dukascopy/: README.md  crontab  download.py  getdata.py  monitor.sh  schema.mysql.sql  schema.psgre.sql
main/log/: remove.py
main/mart/: ohlc.py  ohlc_base.py  schema.mysql.sql  schema.psgre.sql
main/tools/: 20239999_move_bitflyer.py  20239999_move_bybit.py  20239999_move_bybit_executions_XXXX.py  20240229_move_bitflyer.py  dbconf.py  migrate_20240930.py  migrate_all.py  move_bitflyer.py  move_bitflyer_20240229.py  move_bybit_20240301.py  move_bybit_executions_XXXX.py  move_record.py  move_record.sh  table_copy.py
(+39 files in other folders)
