[project]
name = "kktrade"
version = "1.3.1"
requires-python = ">= 3.12.2"
description = "python libraries for trade."
dependencies = [
    'kkpsgre      @ git+https://github.com/kazukingh01/kkpsgre.git@197ffdcc830303e694693fc33e290eaa4e57c52f',
    'pandas==2.2.1',
    'numpy==1.26.4',
    'polars==1.18.0',
    'pyarrow==18.1.0',
    'joblib==1.4.2',
    'requests==2.32.0',
    'websockets==12.0',
    'httpx==0.27.0',
    'beautifulsoup4==4.12.3',
    'playwright==1.46.0',
]

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["kktrade"]
